--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,3 +5,9 @@ bind C-a send-prefix
 
 # Use Vim shortcuts
 setw -g mode-keys vi
+
+# set to easily navigate panes
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
