Add support for focus events in tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,6 +12,9 @@ bind-key R source-file ~/.tmux.conf \; display-message "tmux.conf reloaded."
 # vi is good
 setw -g mode-keys vi
 
+# Focus event
+set -g focus-events on
+
 # mouse behavior
 setw -g mouse on
 
