Update shortcuts on tmux to allow switching windowns without prefixgs

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -25,8 +25,6 @@ bind-key : command-prompt
 bind-key r refresh-client
 bind-key L clear-history
 
-bind-key space next-window
-bind-key bspace previous-window
 bind-key enter next-layout
 
 # use vim-like keys for splits and windows
@@ -36,6 +34,9 @@ bind-key h select-pane -L
 bind-key j select-pane -D
 bind-key k select-pane -U
 bind-key l select-pane -R
+
+bind -n C-n next-window
+bind -n C-p previous-window
 
 bind-key C-o rotate-window
 
@@ -50,8 +51,6 @@ set-window-option -g window-status-current-style fg=magenta
 bind-key a last-pane
 bind-key q display-panes
 bind-key c new-window
-bind-key t next-window
-bind-key T previous-window
 
 bind-key [ copy-mode
 bind-key ] paste-buffer
