--- a/.tmux.conf
+++ b/.tmux.conf
@@ -35,8 +35,8 @@ bind-key j select-pane -D
 bind-key k select-pane -U
 bind-key l select-pane -R
 
-bind -n C-m next-window
-bind -n C-n previous-window
+bind -n C-n next-window
+bind -n C-m previous-window
 
 bind-key + select-layout main-horizontal
 bind-key = select-layout main-vertical
