Change from m as tmux considers it as enter key for some odd reason

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -36,7 +36,7 @@ bind-key k select-pane -U
 bind-key l select-pane -R
 
 bind -n C-n next-window
-bind -n C-m previous-window
+bind -n C-b previous-window
 
 bind-key + select-layout main-horizontal
 bind-key = select-layout main-vertical
