--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,6 +6,7 @@ unbind-key C-a
 bind-key C-a send-prefix
 set -g base-index 1
 set -g default-terminal xterm
+set -s escape-time 0
 
 # Easy config reload
 bind-key R source-file ~/.tmux.conf \; display-message "tmux.conf reloaded."
