--- a/.ideavimrc
+++ b/.ideavimrc
@@ -85,8 +85,10 @@ noremap <C-p> <A-p>
 nnoremap <leader>f :action FindInPath<CR>
 nnoremap <leader>vrf :action RenameFile<CR>
 nnoremap <leader>vre :action RenameElement<CR>
+nnoremap <leader>vrr :action FindUsages<CR>
 nnoremap <leader>cac :action ShowIntentionActions<CR>
-nnoremap <leader>gd :action GotoDeclaration<CR>
+nnoremap <leader>gd :action GotoImplementation<CR>
+nnoremap <leader>gD :action GotoDeclaration<CR>
 nnoremap <leader>rt :action RunClass<CR>
 nnoremap <leader>rb :action ToggleLineBreakpoint<CR>
 nnoremap <leader>nd :action ActivateProjectToolWindow<CR>
