--- a/.ideavimrc
+++ b/.ideavimrc
@@ -96,6 +96,7 @@ nnoremap <leader>nd :action ActivateProjectToolWindow<CR>
 nnoremap <leader>u :action LocalHistory.ShowHistory<CR>
 nnoremap <leader>hh :action ShowBookmarks<CR>
 nnoremap <leader>ha :action ToggleBookmark<CR>
+nnoremap <leader>o :action OptimizeImports<CR>
 
 " Window switching
 nnoremap <S-j> :action NextTab<cr>
