--- a/.tmux.conf
+++ b/.tmux.conf
@@ -81,3 +81,5 @@ set-option -g default-command "/bin/bash -c 'which reattach-to-user-namespace >/
 
 # Allow the arrow key to be used immediately after changing windows
 set-option -g repeat-time 0
+
+bind-key -r f run-shell "tmux neww ~/.local/bin/tmux-sessionizer"
