--- a/.tmux.conf
+++ b/.tmux.conf
@@ -82,4 +82,4 @@ set-option -g default-command "/bin/bash -c 'which reattach-to-user-namespace >/
 # Allow the arrow key to be used immediately after changing windows
 set-option -g repeat-time 0
 
-bind-key -r f run-shell "tmux neww $HOME/.user_bin/project_opener
+bind-key -r f run-shell "tmux neww $HOME/.user_bin/open_project
