--- a/linux/config/sway/config
+++ b/linux/config/sway/config
@@ -203,7 +203,7 @@ bar {
     # When the status_command prints a new line to stdout, swaybar updates.
     # The default just shows the current date and time.
     status_command while \
-        echo "VPN: $(mullvad status) --- $(upower -i /org/freedesktop/UPower/devices/battery_BAT0 | grep 'percentage' | xargs | cut -d ' ' -f 2) $(date +'%d-%m-%Y %H:%M:%S')"; \
+        $HOME/.user_bin/computer_info; \
         do sleep 5; \
         done
 
