Support git filter options and update alacritty to start new instance with ctrl+return

--- a/common/config/alacritty/alacritty.yml
+++ b/common/config/alacritty/alacritty.yml
@@ -127,3 +127,6 @@ colors: *AtomOneLight
 
 # Live config reload (changes require restart)
 live_config_reload: true
+
+key_bindings:
+  - { key: Return, mods: Control, action: CreateNewWindow }
