Use bemenu instead of demenu

--- a/linux/config/sway/config
+++ b/linux/config/sway/config
@@ -17,7 +17,7 @@ set $term alacritty
 # Preferred application launcher
 # Note: pass the final command to swaymsg so that the resulting window can be opened
 # on the original workspace that the command was run on.
-set $menu ls /usr/share/applications | dmenu | xargs swaymsg exec gtk-launch --
+set $menu ls /usr/share/applications | bemenu | xargs swaymsg exec gtk-launch --
 
 ### Output configuration
 #
