--- a/linux/config/sway/config
+++ b/linux/config/sway/config
@@ -35,6 +35,8 @@ output * bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill
 # Example configuration:
 #
 
+exec mako
+
 exec swayidle -w \
          timeout 1800 'swaylock -f -c 000000' \
          timeout 3600 'swaymsg "output * power off"' resume 'swaymsg "output * power on"' \
