--- a/.tmux.conf
+++ b/.tmux.conf
@@ -20,7 +20,7 @@ set -g focus-events on
 # mouse behavior
 setw -g mouse on
 
-set-option -g default-terminal screen-256color
+set-option -g default-terminal alacritty
 
 bind-key : command-prompt
 bind-key r refresh-client
