--- a/linux/config/sway/config
+++ b/linux/config/sway/config
@@ -55,7 +55,7 @@ exec wlsunset -t 4999 -T 5000
 
 ### Input configuration
 
-input "2:7:SynPS/2_Synaptics_TouchPad" {
+input "type:touchpad" {
   dwt enabled
   tap enabled
   natural_scroll enabled
