--- a/common/config/alacritty/alacritty.yml
+++ b/common/config/alacritty/alacritty.yml
@@ -58,17 +58,17 @@ scrolling:
 font:
   # Normal (roman) font face
   normal:
-    family: JetBrains Mono
+    family: JetBrains Mono Nerd Font Mono
     style: Regular
 
   # Bold font face
   bold:
-    family: JetBrains Mono
+    family: JetBrains Mono Nerd Font Mono
     style: Bold
 
   # Italic font face
   italic:
-    family: JetBrains Mono
+    family: JetBrains Mono Nerd Font Mono
 
     style: Italic
 
