--- a/linux/config/sway/config
+++ b/linux/config/sway/config
@@ -222,20 +222,7 @@ bindsym $mod+r mode "resize"
 #
 # Read `man 5 sway-bar` for more information about this section.
 bar {
-    position top
-
-    # When the status_command prints a new line to stdout, swaybar updates.
-    # The default just shows the current date and time.
-    status_command while \
-        $HOME/.user_bin/computer_info; \
-        do sleep 5; \
-        done
-
-    colors {
-        statusline #ffffff
-        background #323232
-        inactive_workspace #32323200 #32323200 #5c5c5c
-    }
+    swaybar_command waybar
 }
 
 include $HOME/.config/sway-custom/*
