--- a/linux/config/sway/config
+++ b/linux/config/sway/config
@@ -44,9 +44,9 @@ output * bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill
 exec mako
 
 exec swayidle -w \
-         timeout 1800 'swaylock -f -c 000000' \
+         timeout 1800 'gtklock -d' \
          timeout 3600 'swaymsg "output * power off"' resume 'swaymsg "output * power on"' \
-         before-sleep 'swaylock -f -c 000000'
+         before-sleep 'gtklock -d'
 
 # Set night light always
 exec wlsunset -t 4999 -T 5000
