Fix source file binding and use command -v instead of which

--- a/common/config/tmux/tmux.conf
+++ b/common/config/tmux/tmux.conf
@@ -9,7 +9,7 @@ set -g default-terminal xterm
 set -s escape-time 0
 
 # Easy config reload
-bind-key R source-file ~/.tmux.conf \; display-message "tmux.conf reloaded."
+bind-key R source-file ~/.config/tmux/tmux.conf \; display-message "tmux.conf reloaded."
 
 # vi is good
 setw -g mode-keys vi
@@ -76,7 +76,7 @@ setw -g monitor-activity on
 set -g visual-activity on
 
 # Enable native Mac OS X copy/paste
-set-option -g default-command "/bin/bash -c 'which reattach-to-user-namespace >/dev/null && exec reattach-to-user-namespace $SHELL -l || exec $SHELL -l'"
+set-option -g default-command "/bin/bash -c 'command -v reattach-to-user-namespace > /dev/null && exec reattach-to-user-namespace $SHELL -l || exec $SHELL -l'"
 
 # Allow the arrow key to be used immediately after changing windows
 set-option -g repeat-time 0
