--- a/linux/config/sway/config
+++ b/linux/config/sway/config
@@ -47,9 +47,9 @@ output * bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill
 exec mako
 
 exec swayidle -w \
-         timeout 1800 $lock \
+         timeout 1800 'gtklock -d' \
          timeout 3600 'swaymsg "output * power off"' resume 'swaymsg "output * power on"' \
-         before-sleep $lock
+         before-sleep 'gtklock -d'
 
 # Set night light always
 exec wlsunset -t 4999 -T 5000
@@ -120,7 +120,7 @@ input "type:keyboard" {
     bindsym $mod+Shift+c reload
 
     # Exit sway (logs you out of your Wayland session)
-    bindsym $mod+Shift+e exec swaynag -t warning -m 'You pressed the exit shortcut. Do you really want to exit sway? This will end your Wayland session.' -B 'Yes, exit sway' 'swaymsg exit'
+    bindsym $mod+Shift+e exec swaynag -t warning -m 'Do you want to exit sway?' -B 'Yes, exit sway' 'swaymsg exit'
 #
 # Moving around:
 #
