--- a/linux/config/sway/config
+++ b/linux/config/sway/config
@@ -47,9 +47,9 @@ output * bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill
 exec mako
 
 exec swayidle -w \
-         timeout 900 "$lock" \
+         timeout 900 'swaylock -f -c 000000' \
          timeout 1800 'swaymsg "output * power off"' resume 'swaymsg "output * power on"' \
-         before-sleep "$lock"
+         before-sleep 'swaylock -f -c 000000'
 
 # Set night light always
 exec wlsunset -t 4999 -T 5000
