--- a/linux/config/sway/config
+++ b/linux/config/sway/config
@@ -31,7 +31,7 @@ set $qrencode_menu copyq read 0 | qrencode -o /tmp/__temporary_qrcode.png && feh
 ### Output configuration
 #
 # Default wallpaper (more resolutions are available in /usr/share/backgrounds/sway/)
-output * bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill
+output * bg ~/.config/sway/wallpaper.jpg fill
 #
 # Example configuration:
 #
