--- a/linux/config/sway/config
+++ b/linux/config/sway/config
@@ -47,9 +47,9 @@ output * bg ~/.config/sway/wallpaper.jpg fill
 exec mako
 
 exec swayidle -w \
-         timeout 900 'swaylock -f -c 000000' \
+         timeout 900 "$lock" \
          timeout 1800 'swaymsg "output * power off"' resume 'swaymsg "output * power on"' \
-         before-sleep 'swaylock -f -c 000000'
+         before-sleep "$lock"
 
 # Set night light always
 exec wlsunset -t 4999 -T 5000
