--- a/common/config/newsboat/config
+++ b/common/config/newsboat/config
@@ -1,6 +1,7 @@
 auto-reload yes
 
 external-url-viewer "urlscan -dc -r 'linkhandler {}'"
+download-path `echo $XDG_DATA_HOME`/newsboat/podcasts
 
 bind-key j down
 bind-key k up
