Use mpv player for playing podcasts or any media

--- a/common/config/newsboat/config
+++ b/common/config/newsboat/config
@@ -1,6 +1,7 @@
 auto-reload yes
 
 browser "`echo $BROWSER`"
+player mpv
 external-url-viewer "urlscan -dc -r 'linkhandler {}'"
 download-path `echo $XDG_DATA_HOME`/newsboat/podcasts
 
