Fetch crypto prices from another url and add hints on stock price binary

--- a/linux/config/waybar/config
+++ b/linux/config/waybar/config
@@ -15,21 +15,21 @@
     },
     "custom/crypto-btc": {
         "format": " {}",
-        "exec": "crypto_price btc",
+        "exec": "crypto_price bitcoin",
         "exec-if": "command -v crypto_price",
         "restart-interval": 300,
         "on-cick": "brave-browser https://www.coingecko.com/en/coins/bitcoin"
     },
     "custom/crypto-eth": {
         "format": "󰡪 {}",
-        "exec": "crypto_price eth",
+        "exec": "crypto_price ethereum",
         "exec-if": "command -v crypto_price",
         "restart-interval": 300,
         "on-cick": "brave-browser https://www.coingecko.com/en/coins/ethereum"
     },
     "custom/crypto-xmr": {
         "format": "󰗹 {}",
-        "exec": "crypto_price xmr",
+        "exec": "crypto_price monero",
         "exec-if": "command -v crypto_price",
         "restart-interval": 300,
         "on-cick": "brave-browser https://www.coingecko.com/en/coins/monero"
