--- a/common/config/tmux/tmux.conf
+++ b/common/config/tmux/tmux.conf
@@ -49,6 +49,7 @@ set-window-option -g window-status-current-style fg=magenta
 
 bind-key a last-pane
 bind-key q display-panes
+bind-key w choose-session
 bind-key c new-window
 
 bind-key [ copy-mode
