--- a/common/config/gitconfig/.gitconfig
+++ b/common/config/gitconfig/.gitconfig
@@ -1,3 +1,6 @@
+[rerere]
+    enabled = true
+
 [alias]
 	co = checkout
 	lg = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
