--- a/common/config/tmux/tmux.conf
+++ b/common/config/tmux/tmux.conf
@@ -51,6 +51,7 @@ bind-key a last-pane
 bind-key q display-panes
 bind-key w choose-session
 bind-key c new-window
+bind-key ( switch-client -l
 
 bind-key [ copy-mode
 bind-key ] paste-buffer
